--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "miragejs": "^0.1.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-input-emoji": "^5.1.0",
     "react-router": "^6.12.1",
     "react-router-dom": "^6.12.1",
     "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
